--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -395,9 +395,10 @@ Based on~\cite{Arato2003}, is called a hardware-software partition if it is a bi
 \label{hardware-costs}
 H_p  &= \Sigma_{V_i \in V_h} h_i,
 \end{align}
-%
+
 \vspace{2 mm}
-\noindent and the software cost of $P$ ({\it i.e.}, software cost of the nodes and the communication cost) is given by Eq.~\ref{software-communication-costs}
+\noindent
+and the software cost of $P$ ({\it i.e.}, software cost of the nodes and the communication cost) is given by Eq.~\ref{software-communication-costs}
 %
 %
 %  S_p &= \Sigma_{\left(v_i \;\in\; V_s\right)} s_i + \Sigma_{(v_i,v_j) \in\; %E_p}\; c(V_i, V_j).
