--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -344,7 +344,7 @@ pages={794--801},
 }
 
 @article{Ramalho2013,
-author={Ramalho and Freitas1 and Sousa and Marques and Cordeiro and Fischer},
+author={Ramalho and Freitas and Sousa and Marques and Cordeiro and Fischer},
 title={SMT-Based Bounded Model Checking of C++ Programs.},
 journal={Intl. Conf. and Workshops on the Engineering of Computer-Based Systems},
 year={2013},
